# OpenTTD

./: .dorpsgek.yml  .editorconfig  .gitignore  CMakeLists.txt  CODINGSTYLE.md  COMPILING.md  CONTRIBUTING.md  COPYING.md  CPackProperties.cmake.in  CREDITS.md  Doxyfile.in  METRO_AUTOTESTS_NOTES.md  README.md  changelog.md  deep-research-report.md  known-bugs.md  run.bat  vcpkg.json
regression/scenarios/: CMakeLists.txt
regression/scenarios/metro_industry_cargo_via_underground/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_loop_two_portals_dual_underground/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_passenger_acceptance_via_exit/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_regression_portal_link_persists/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_regression_signal_roundtrip/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_regression_station_remove_preserves_exit/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_surface_station_build/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_surface_to_underground_link/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_train_launch_surface/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_train_launch_underground/: CMakeLists.txt  info.nut  main.nut  scenario.cfg
regression/scenarios/metro_underground_station_build/: CMakeLists.txt  info.nut  (+2 more)
(+1679 files in other folders)
