add_subdirectory(road_query_build)
add_subdirectory(road_vehicle_setup)
add_subdirectory(vehicle_route_runtime)
add_subdirectory(metro_surface_station_build)
add_subdirectory(metro_underground_station_build)
add_subdirectory(metro_surface_to_underground_link)
add_subdirectory(metro_train_launch_surface)
add_subdirectory(metro_train_launch_underground)
add_subdirectory(metro_loop_two_portals_dual_underground)
add_subdirectory(metro_regression_station_remove_preserves_exit)
add_subdirectory(metro_regression_signal_roundtrip)
add_subdirectory(metro_regression_portal_link_persists)
add_subdirectory(metro_passenger_acceptance_via_exit)
add_subdirectory(metro_industry_cargo_via_underground)
